--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -7,12 +7,22 @@
 		{{> loginButtons}}
 	</div>
 	<div id="main">
-		<h2>
-			Join Game
-		</h2>
-		<form id="#joinGame">
-			<input type="text" name="id" class="textBox"/>
-			<input type="submit" name="submit" id="joinSubmit" value="Battle!" />
-		</form>
+		<div class="form">
+			<h2>
+				Join Game
+			</h2>
+			<form id="joinGame">
+				<input type="text" id="gameId" name="id" class="textBox" />
+				<input type="submit" id="joinSubmit" value="Battle!" class="button" />
+			</form>
+		</div>
+		<div class="form">
+			<h2>
+				Create Game
+			</h2>
+			<form id="createGame">
+				<input type="submit" id="createSubmit" value="Create!" class="button" />
+			</form>
+		</div>
 	</div>
 </body>
