--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -37,7 +37,14 @@
 <template name="game">
 	{{#if display}}
 		<div id="gameWindow">
-			
+			<div id="gameTitle">
+				{{hostName}}'s Game
+			</div>
+			<div id="map">
+				<svg height="210" width="500">
+					<polygon points="200,10 250,190 160,210" style="fill:lime;stroke:purple;stroke-width:1" />
+				</svg>
+			</div>
 		</div>
 	{{/if}}
 </template>
