Created a working timer that begins to count down from 10 once the game is filled

--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -40,6 +40,9 @@
 			<div id="gameTitle">
 				{{hostName}}'s Game
 			</div>
+			<div id="countDown">
+				Time Until Game Starts: {{countDown}}
+			</div>
 		</div>
 	{{/if}}
 </template>
