Improved database security in Methods

--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -43,6 +43,7 @@
 			<div id="countDown">
 				Time Until Game Starts: {{countDown}}
 			</div>
+			<button id="leaveGame">Leave Game</button>
 		</div>
 	{{/if}}
 </template>
