Added in logo images

--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -8,6 +8,7 @@
 		{{#if showLeave}}
 			<button id="leaveGame">Leave Game</button>
 		{{/if}}
+		<img src="/Images/FullLogo.png" width="650" id="fullLogo" />
 	</div>
 	<div id="main">
 		{{> form}}
@@ -60,7 +61,7 @@
 						{{#each theirCards}}
 							<td>
 								<div class="card">
-									<span class="cardTitle">Card Back Image Here</span>
+									<span class="cardTitle"><img src="/Images/ShortLogo.png" width="125" class="cardBack" /></span>
 								</div>
 							</td>
 						{{/each}}
