Added image for where the last card played will be displayed

--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -84,7 +84,7 @@
 					</form>
 				</div>
 				<div id="lastCard">
-					
+					<img src="Images/blankCardDeck.png" height="175" />
 				</div>
 			</div>
 			<div id="yourStats" class="stats windowSection">
