Added in inital function for playing cards, made functioning attack logic

--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -51,7 +51,7 @@
 				{{#if theirStats}}
 					<div class="stat">Units: {{theirStats.units}}</div>
 					<div class="stat">Money: ${{theirStats.money}}</div>
-					<div class="stat">Territories: {{theirStats.territory}}</div>
+					<div class="stat">Territory: {{theirStats.territory}}</div>
 					<div class="stat">Supplies: {{theirStats.supplies}}</div>
 				{{/if}}
 			</div>
@@ -91,7 +91,7 @@
 				{{#if yourStats}}
 					<div class="stat">Units: {{yourStats.units}}</div>
 					<div class="stat">Money: ${{yourStats.money}}</div>
-					<div class="stat">Territories: {{yourStats.territory}}</div>
+					<div class="stat">Territory: {{yourStats.territory}}</div>
 					<div class="stat">Supplies: {{yourStats.supplies}}</div>
 				{{/if}}
 			</div>
