Began working with turn system

--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -74,7 +74,7 @@
 					<div id="msgList">
 						{{#each chatMessages}}
 							<div class="chatMsg">
-								<b>{{sender}}</b>: {{msg}}
+								<span style="color: {{color}}"><b>{{sender}}</b>: {{msg}}</span>
 							</div>
 						{{/each}}
 					</div>
