Made card usage take actions and remove card from hand

--- a/BattleDraw.html
+++ b/BattleDraw.html
@@ -100,7 +100,7 @@
 					<tr>
 						{{#each yourCards}}
 							<td>
-								<div class="card">
+								<div class="card" cardId="{{_id}}">
 									<span class="cardTitle">{{name}}</span>
 									<span class="cardDesc">{{desc}}</span>
 								</div>
